--- a/app/templates/admin/produtos.html
+++ b/app/templates/admin/produtos.html
@@ -81,7 +81,7 @@
     <div class="main-content">
         <!-- Header -->
         <div class="admin-header">
-            <h1><i class="fas fa-box"></i> Gerenciar Produtos</h1>
+            <h1><i class="fas fa-box me-2" style="color: var(--cor-dourada);"></i>Gerenciar Produtos</h1>
             <a href="{{ url_for('admin.produto_novo') }}" class="btn btn-add">
                 <i class="fas fa-plus"></i> Adicionar Produto
             </a>
